# URIS

./: .gitignore  CHANGELOG.md  CHECKLIST.md  COLAB_A100_GUIDE.md  DETAILED_RESPONSE_GUIDE.md  GITHUB_PUSH_GUIDE.md  Makefile  QUICK_DEPLOY_COLAB.md  README.md  SUMMARY.md  ULTRA_SPEED_SUMMARY.md  app.py  app_colab_a100.py  extract_clip.bat  extract_video_clip.py  find_test_videos.py  pyproject.toml  requirements.txt  test_app_minimal.py  test_model.py
.github/workflows/: platform-checks.yml
.streamlit/: config.toml
Qwen2.5-VL-URIS-Final-LoRA/: adapter_config.json
Qwen2.5-VL-URIS-Predictive-LoRA/: adapter_config.json
archive/: README.md
archive/legacy-video-reasoning-root/: README.md
configs/scenes/: bedroom.json  kitchen.json  living_room.json
configs/training/: qwen25vl_lora_colab.example.yaml  uris_home_objects_yolo.example.yaml
docs/plans/: 2026-02-24-live-camera-yolo-qwen-design.md  2026-02-24-live-camera-yolo-qwen-implementation.md  2026-02-24-live-memory-reference-grounding-design.md  2026-02-24-live-memory-reference-grounding-implementation.md  2026-02-24-uris-platform-upgrade-design.md  2026-02-24-uris-platform-upgrade-implementation.md
legacy/: README.md
scripts/: benchmark_interaction.py  project_doctor.py
src/uris_platform/: __init__.py  (+4 more)
tests/: test_evaluation_metrics.py  test_live_scene_memory.py  test_live_trigger_policy.py  test_object_tracking.py  test_platform_config.py  test_qwen_prompt_builder.py  test_qwen_response_parser.py  test_scenario_engine.py  test_state_init.py  test_ui_components.py  test_vision_result_normalization.py
(+50 files in other folders)
