[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "uris-platform"
version = "0.2.0"
description = "URIS — Unified Robot Interaction System: VLM-powered home environment interaction platform"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "pillow>=9.0.0",
    "numpy>=1.21.0",
    "opencv-python>=4.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
